# Autodiff

./: .gitignore  LICENSE  README.md  d_20baa5777fe23637___init___py.html  d_20baa5777fe23637_autodiff_py.html  d_20baa5777fe23637_functions_py.html  index.html  pyproject.toml  status.json
.github/workflows/: coverage.yml  test.yml
autodiff_NARS/: autodiff.py  functions.py
autodiff_NARS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
demo/: demo.py
docs/: README.md  documentation.ipynb  documentation_new.ipynb  milestone1.ipynb  milestone2.ipynb  milestone2_prograss.md  milestone2_progress.md
src/autodiff/: __init__.py  autodiff.py  functions.py  new_autodiff_tests.py
src/autodiff/demo/: demo.py
tests/: run_tests.sh
tests/autodiff/: test_autodiff.py  test_functions.py
tests/autodiff_NARS/: test_autodiff.py  test_functions.py
tests/test_1/: test_1.py
tests/test_2/: test_2.py
