[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodiff_NARS"
version = "0.0.1"
authors = [
  {name="Anna Midgley", email="amidgley@g.harvard.edu" }, {name="Nora Hallqvist", email="nhallqvisthellstadius@g.harvard.edu" },{name="Sebastian Weisshaar", email="sweisshaar@g.harvard.edu" },{name="Robin Robinson", email="robin_robinson@college.harvard.edu" },
]
description = "The name of our package is autodiff. Its functionality is to provide the user with methods to undergo automatic differentiation of both univariate and multivariate functions. We envision the user should import the autodiff and functions modules. The user should define an input and seed, and these parameters are used to instantiate the AutoDiff class. The user can access forward or backward mode by calling a method of the AutoDiff class."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Course Team Github Page" = "https://code.harvard.edu/CS107/team19"
